...
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <segments>
                                <segment title="Daily"/>
                                <segment title="Weekly"/>
                            </segments>
                        </segmentedControl>
                        <barButtonItem key="rightBarButtonItem" title="Commodities" id="Syv-I8-dvC">
                            <connections>
                                <segue destination="vX9-tN-z9j" kind="show" identifier="settings" id="9oD-GI-GOw"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                            <constraint firstItem="3hZ-gd-09L" firstAttribute="top" secondItem="fe5-Wr-m0s" secondAttribute="top" id="alE-gK-X5V"/>
                            <constraint firstItem="3hZ-gd-09L" firstAttribute="leading" secondItem="fe5-Wr-m0s" secondAttribute="leading" id="gyT-FH-pAq"/>
                            <constraint firstAttribute="bottom" secondItem="3hZ-gd-09L" secondAttribute="bottom" constant="-379" id="qGD-46-D5A"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="fe5-Wr-m0s"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Indicators" image="indicators" selectedImage="indicators" id="MwA-Ha-UOg"/>
                    <navigationItem key="navigationItem" id="Ph3-Np-wPU">
                        <barButtonItem key="rightBarButtonItem" title="Commodities" id="WUa-LX-hIq">
                            <connections>
                                <segue destination="vX9-tN-z9j" kind="show" identifier="settings" id="vMF-g3-eNe"/>
                            </connections>
                        </barButtonItem>
...
            <point key="canvasLocation" x="-1471.2" y="944.97751124437787"/>
        </scene>
        <!--Simulation-->
        <scene sceneID="q0Z-SM-A0o">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uVe-n0-BqN" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Simulation" image="montecarlo" selectedImage="montecarlo" id="oCz-bv-2qz"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="73N-78-amk">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
            <point key="canvasLocation" x="-262" y="945"/>
        </scene>
        <!--News-->
        <scene sceneID="Czb-L9-Vqx">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uTf-9p-sEs" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="News" image="newspaper" selectedImage="newspaper" id="eD6-t2-haG"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="D7P-TH-O9u">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
