import UIKit
import Charts
let numberOfPointsToBeDrawn = 20
class TechnicalViewController: UIViewController,UITableViewDelegate,UITableViewDataSource {

    var curCommodity:Commodity!
    let technicalIndicators = ["Simple moving average","Exp moving average","MACD","RSI"]
    
    @IBOutlet weak var btnName: UIButton!
    @IBOutlet weak var tblview: UITableView!
    @IBOutlet weak var line: LineChartView!
    var activity: UIActivityIndicatorView?
    let linedrawer = lineDrawer.sharedinstance
...
